$Id$

MDAnalysis CHANGELOG
====================

The rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every subversion log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
??/??/10 orbeckst, denniej0
        (Running list of enhancements, to be edited for final
        entry when stable changes are merged back into trunk)

        * minimum requirement is python 2.4 (using with_statement in
          the analysis module and we have not tested on 2.3 in a while)
        * reads hydrogen bond donor/acceptor list from psf and sets up
          structures for hydrogen bonding analysis
          TODO: H-BOND ANALYSIS NOT WORKING YET
        * analysis modules:
          - leaflets
          - native contacts
        * write selections for other codes from AtomGroups (VMD,
          pymol, CHARMM, Gromacs ndx)


05/28/10 orbeckst, denniej0
        * 0.6.2 release
	* removed a number of imports from the top level (such as rms_fitting);
  	  this might break some scripts that still rely on the layout that was
  	  used for 0.5.x (which is now officially declared deprecated)
        * defined trajectory API
        * deprecated DCD.dcd_header --> DCD._dcd_header
	* XTC and TRR compute numframes by iterating through trajectory (slow!)
	* introduced units: base units are ps (time) and Angstrom (length); see core.flags
	* XTC and TRR automatically convert between native Gromacs units (ps, nm) and 
          base units (uses core.flags['convert_gromacs_lengths'] = True)
	* more test cases
        * *really* FIXED Issue 16 (can easy_install from tar file)
	* FIXED a bug in AtomGroup.principalAxes()
	* added dependency information to setup.py (numpy and
  	  biopython by default; nose for tests)

04/30/10 orbeckst

        * 0.6.1 release